# ccw

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  UBIQUITOUS_LANGUAGE.md  apm.yml  opencode.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.opencode/agents/: README.md  capability-developer.md  capability-plan-manager.md  capability-reviewer.md
.opencode/instructions/: AGENTIC_PLAN_WORKFLOW.instructions  COPILOT_INSTRUCTIONS.instructions
docs/adr/: 0001-use-microsoft-conductor-as-the-orchestrator.md  0002-keep-orchestration-and-portable-brain-in-ccw-stack.md  0003-keep-portable-session-handoff-contract-in-ccw.md
docs/prompts/: wikiagent-lane-regression.md
docs/releases/: 0.1.10.md  0.1.11.md  0.1.12.md  0.1.13.md  0.1.14.md  0.1.15.md  0.1.16.md  0.1.17.md  0.1.18.md  0.1.19.md  0.1.20.md  0.1.21.md  0.1.22.md  0.1.23.md  0.1.24.md  0.1.3.md  0.1.4.md  0.1.5.md  0.1.6.md  0.1.7.md  0.1.8.md  0.1.9.md  RELEASING.md
docs/templates/: adr-template.md  development-plan-template.md
scripts/: link-private-wiki.sh  release-pypi.sh
src/ccw/: __init__.py  __main__.py  classify.py  cli.py  compile.py  conductor.py  config.py  episodes.py  facts.py  index.py  init.py  mcp_server.py  pipeline.py  recipe.py  schema.py  session.py  update.py  validate.py
tests/: test_cli_classify.py  test_cli_compile.py  test_cli_conductor.py  test_cli_episodes.py  test_cli_facts.py  test_cli_index.py  test_cli_init.py  test_cli_session.py  test_cli_update.py  test_compile.py  test_integration_mcp_value.py  test_mcp_server.py  test_pipeline.py  test_recipes.py  test_session.py
wiki/: AGENTS.md  index.md  log.md
(+53 files in other folders)
