[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ccw-mcp"
version = "0.1.3"
description = "Deterministic context compiler for small-window coding models"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Felipe Ferrari", email = "fmferrari@github.com"},
]
keywords = [
    "context compiler",
    "developer tools",
    "mcp",
    "repository indexing",
    "small-window models",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/fmferrari/ccw"
Repository = "https://github.com/fmferrari/ccw"
Issues = "https://github.com/fmferrari/ccw/issues"
Documentation = "https://github.com/fmferrari/ccw#readme"

[project.scripts]
ccw = "ccw.cli:main"
ccw-mcp = "ccw.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
